--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 ---
-name: "Python Wheel Compiler"
+name: "CPython 3.10 Wheel Compiler"
 
 description: "Compile Python Wheels on GitHub actions."
 
@@ -8,12 +8,6 @@ inputs:
     description: |
       Sub-directory to cd into before running semantic-release publish
     default: "./dist/"
-    required: false
-
-  python-version:
-    description: |
-      Version of Python used to compile python sources.
-    default: "3.10"
     required: false
 
   filename:
@@ -25,5 +19,3 @@ inputs:
 runs:
   using: "docker"
   image: "Dockerfile"
-  args:
-    - ${{ inputs.python-version }}
